tests/test_assets/semantic/invalid/switch/invalid_expression_type.cog
test::(value: f64) -> i32 {
    switch value {
        case 1.0:
            return 1;

        default:
            return 0;
    }
}