tests/test_assets/semantic/invalid/switch/invalid_expression_type.expected
semantic error at line 2: switch expression must be integer, bool, or enum
1 semantic error generated.
